update launch script